HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/HeapDeallocRawUnsafe/Expected.uv
//! Expected diagnostic metadata for the HeapDeallocRawUnsafe rejected-source specimen.

expectedDiagnostic("E-MEM-3030", "rule.14.DeallocRaw-Unsafe-Err")
